--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "animate.css": "^4.1.1",
     "gsap": "^3.12.5",
     "lenis": "^1.1.3",
+    "locomotive-scroll": "^4.1.4",
     "mongodb": "^6.5.0",
     "mongoose": "^8.2.4",
     "next": "14.0.3",
